# ipe-anim-svg

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  TODO.md  apply_classes.py  ipe-layers.js  ipe2reveal.py  ipe_info.py  main.cpp
cmake/: FindCairo.cmake  FindIpe.cmake  FindIpeCairo.cmake
example/: example.ipe  example_info.json  example_tags.txt  index.html  ipe-layers.js  ipe-meta.json  presentation-standalone.html  presentation.html
